@@ -1,3 +1,8 @@
+2018-01-09  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-make-tramp-file-name): Check, that method is
+	not empty.  (Bug#30038)
+
 2018-01-04  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-message-show-message): Change default.
